# Lambda-Inspired-Platform

./: .dockerignore  .env.example  .gitignore  README.MD  docker-compose.yml  entrypoint.sh  filestats.txt  index.html  pyproject.toml  utils.py
airflow-home/dags/: csv_batch_nightly.py
batch_processor/: batch_csv.Dockerfile  processor.py
consumer-stream-api/: consumer.Dockerfile
consumer_stream_api/: consumer.Dockerfile  consumer_api.py  requirements.txt
csv_batch_nightly/consumer-stream/: Dockerfile
csv_batch_nightly/cron/: Dockerfile
dags/: batch_runner.py
data/: financial_transactions.csv
docker/batch_processor/: Dockerfile
docker/consumer-stream/: Dockerfile  consumer.py  requirements.txt
docker/cron/: Dockerfile  start-cron.sh
docker/csv-batch/: Dockerfile  processor.py  requirements.txt
docker/db-setup/: Dockerfile  db-init.py
docker/producer-stream/: Dockerfile  producer.py  requirements.txt
docker/producer_stream/: Dockerfile
kubernetes/: database-secret.yaml  namespace.yaml
kubernetes/deployments/: consumer-stream.yaml  cron-runner.yaml  csv-batch.yaml  db-setup.yaml  kafka.yaml  pgadmin.yaml  postgres.yaml  producer-stream.yaml
kubernetes/services/: kafka.yaml  pgadmin-service.yaml  postgres.yaml
output/: debug.txt
producer-streaming-api/: producer_api.py  requirements.txt
producer_streaming_api/: producer.Dockerfile  producer_api.py
